# xrayctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: .xrayctl.example.yaml  cli.md  mcp.md  skill.md
docs/decisions/: 2026-05-28-cli-plus-mcp-single-package.md  2026-05-28-geoip-deferred-to-v02.md  2026-05-28-mit-license-and-mit-only-deps.md  2026-05-28-separate-oss-repo.md  2026-05-28-use-adr.md  2026-05-28-vless-parser-own-implementation.md  2026-05-28-xray-binary-system-path.md  INDEX.md  _template.md
scripts/: check_no_leak.sh
src/xrayctl/: __init__.py
src/xrayctl/cli/: __main__.py  main.py
src/xrayctl/lib/: config.py
src/xrayctl/mcp/: __main__.py  server.py
src/xrayctl/skill/: SKILL.md
tests/: conftest.py
tests/unit/: test_smoke.py
