[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xrayctl"
version = "0.1.0.dev0"
description = "Programmatic Happ deeplink builder + MCP server for the Xray/Reality stack."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "xrayctl contributors" }]
keywords = ["xray", "vless", "reality", "happ", "vpn", "proxy", "mcp", "fastmcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "httpx>=0.27",
  "dnspython>=2.6",
  "fastmcp>=0.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-snapshot>=0.9",
  "ruff>=0.8",
  "mypy>=1.10",
  "types-pyyaml",
]

[project.scripts]
xrayctl = "xrayctl.cli.main:cli"
"xrayctl-mcp" = "xrayctl.mcp.server:main"

[project.urls]
Homepage = "https://github.com/veeskelad/xrayctl"
Issues = "https://github.com/veeskelad/xrayctl/issues"
Changelog = "https://github.com/veeskelad/xrayctl/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/xrayctl"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "ASYNC", "S", "PL", "TRY", "PERF"]
ignore = ["PLR0913", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "slow: integration tests requiring network or external binaries",
]

[tool.coverage.run]
source = ["src/xrayctl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Scaffold phase: lib/ modules are stubs raising NotImplementedError.
# Raise to 90 once v0.1.0 functional milestones land (per plan).
fail_under = 0
